Cambio fix para cajas

--- a/PlataFormaDePagosWebApp/Views/REPORTESMENSUALES/Index.cshtml
+++ b/PlataFormaDePagosWebApp/Views/REPORTESMENSUALES/Index.cshtml
@@ -30,7 +30,7 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.COMERCIO?.NombreComercial</td>
+                <td>@item.COMERCIO.Nombre</td>
                 <td>@item.CantidadDeCajas</td>
                 <td>₡@item.MontoTotalRecaudado.ToString("N2")</td>
                 <td>@item.CantidadDeSinpes</td>
