Avanzando con usuarios

--- a/PlataFormaDePagosWebApp/Views/USUARIOs/Index.cshtml
+++ b/PlataFormaDePagosWebApp/Views/USUARIOs/Index.cshtml
@@ -41,9 +41,9 @@
         </td>
         <td>@(item.Estado ? "Activo" : "Inactivo")</td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-            @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
+            @Html.ActionLink("Editar", "Edit", new { id = item.IdUsuario }, new { @class = "btn btn-sm btn-warning" }) |
+            @Html.ActionLink("Detalles", "Details", new { id = item.IdUsuario }, new { @class = "btn btn-sm btn-info" }) |
+            @Html.ActionLink("Eliminar", "Delete", new { id = item.IdUsuario }, new { @class = "btn btn-sm btn-danger" })
         </td>
     </tr>
 }
