--- a/PlataFormaDePagosWebApp/Views/USUARIOs/Delete.cshtml
+++ b/PlataFormaDePagosWebApp/Views/USUARIOs/Delete.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Eliminar Usuario</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Estas seguro de borrar el usuario?</h3>
 <div>
     <h4>USUARIO</h4>
     <hr />
