--- a/PlataFormaDePagosWebApp/Views/USUARIOs/Details.cshtml
+++ b/PlataFormaDePagosWebApp/Views/USUARIOs/Details.cshtml
@@ -25,8 +25,8 @@
         <dt>@Html.DisplayNameFor(model => model.SegundoApellido)</dt>
         <dd>@Html.DisplayFor(model => model.SegundoApellido)</dd>
 
-        <dt>@Html.DisplayNameFor(model => model.Identificación)</dt>
-        <dd>@Html.DisplayFor(model => model.Identificación)</dd>
+        <dt>@Html.DisplayNameFor(model => model.Identificacion)</dt>
+        <dd>@Html.DisplayFor(model => model.Identificacion)</dd>
 
         <dt>@Html.DisplayNameFor(model => model.CorreoElectronico)</dt>
         <dd>@Html.DisplayFor(model => model.CorreoElectronico)</dd>
