--- a/PlataFormaDePagosWebApp/Views/USUARIOs/Edit.cshtml
+++ b/PlataFormaDePagosWebApp/Views/USUARIOs/Edit.cshtml
@@ -41,10 +41,10 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Identificación, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Identificacion, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Identificación, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Identificación, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.Identificacion, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.Identificacion, "", new { @class = "text-danger" })
         </div>
     </div>
 
