--- a/PlataFormaDePagosWebApp/Views/BITACORAs/Index.cshtml
+++ b/PlataFormaDePagosWebApp/Views/BITACORAs/Index.cshtml
@@ -26,9 +26,9 @@
             <td>@item.TipoDeEvento</td>
             <td>@item.FechaDeEvento</td>
             <td>@item.DescripcionDeEvento</td>
-            <td><pre>@item.StackTrace</pre></td>
-            <td><pre>@item.DatosAnteriores</pre></td>
-            <td><pre>@item.DatosPosteriores</pre></td>
+            <td><pre class="wrap-json">@item.StackTrace</pre></td>
+            <td><pre class="wrap-json">@item.DatosAnteriores</pre></td>
+            <td><pre class="wrap-json">@item.DatosPosteriores</pre></td>
         </tr>
     }
 </table>
