--- a/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
@@ -11,35 +11,61 @@
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-custom border-bottom">
         <div class="container">
-            @Html.ActionLink("SINPE Empresarial", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
+            <a class="navbar-brand" href="@Url.Action("Index", "Home")">
+                <img src="~/Content/img/LogoBanco.png" alt="Logo" style="height:150px;">
+            </a>
+            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
+            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-end">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Manejo de Comercios", "Index", "COMERCIOs", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Manejo de Cajas", "Index", "CAJAs", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Manejo de Sinpes", "Index", "SINPEs", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Manejo de Configuraciones", "Index", "CONFIGURACION_DE_COMERCIO", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Manejo de Usuarios", "Index", "USUARIOs", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Manejo de Reportes", "Index", "REPORTESMENSUALES", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Bitácora de Eventos", "Index", "BITACORAs", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manejo de Comercios", "Index", "COMERCIOs", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manejo de Cajas", "Index", "CAJAs", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manejo de Sinpes", "Index", "SINPEs", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manejo de Configuraciones", "Index", "CONFIGURACION_DE_COMERCIO", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manejo de Usuarios", "Index", "USUARIOs", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Manejo de Reportes", "Index", "REPORTESMENSUALES", null, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Bitácora de Eventos", "Index", "BITACORAs", null, new { @class = "nav-link" })</li>
                 </ul>
             </div>
+            <div class="text-center mt-4">
+                <a href="@Url.Action("Login", "Account")" class="btn btn-primary btn-lg" style="background-color:#054e98; border:none;">
+                    Sinpe en Línea
+                </a>
+            </div>
+
         </div>
     </nav>
 
     <div class="container body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>
-                &copy; @DateTime.Now.Year - SINPE Empresarial
-            </p>
+        <footer class="footer-custom mt-5">
+            <div class="container text-center text-white py-4">
+                <div class="mb-3">
+                    <img src="~/Content/img/LogoBanco.png" alt="Logo" style="height: 60px;">
+                </div>
+                <div class="footer-links mb-3">
+                    <a href="#" class="footer-link">Política de Privacidad</a>
+                    <a href="#" class="footer-link">Términos y Condiciones</a>
+                    <a href="#" class="footer-link">Preguntas Frecuentes</a>
+                    <a href="#" class="footer-link">Línea Ética</a>
+                    <a href="#" class="footer-link">Índice de Comparabilidad Financiera</a>
+                </div>
+                <div>
+                    <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-youtube"></i></a>
+                    <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+                </div>
+                <div class="mt-3">
+                    <small>&copy; @DateTime.Now.Year - Banco Los Patitos</small>
+                </div>
+            </div>
         </footer>
     </div>
 
