--- a/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     </title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
 
