--- a/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
                     <li>@Html.ActionLink("Manejo de Reportes", "Index", "REPORTESMENSUALES", null, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Bitácora de Eventos", "Index", "BITACORAs", null, new { @class = "nav-link" })</li>
                 </ul>
+                @Html.Partial("_LoginPartial")
             </div>
             <div class="text-center mt-4">
                 <a href="@Url.Action("Login", "Account")" class="btn btn-primary btn-lg" style="background-color:#054e98; border:none;">
