trabajando login y permisos

--- a/PlataFormaDePagosWebApp/Views/Shared/Unauthenticated.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Shared/Unauthenticated.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @using Microsoft.AspNet.Identity
-<h2 class="mb-4 text-primary fw-bold">No ha iniciado sesion!</h2>
-<p>Por favor inicie sesion o registrese para continuar.</p>
+<h2 class="mb-4 text-primary fw-bold">Error de permisos</h2>
+<p>No posee los permisos necesarios para consultar la pagina solicitada.</p>
 <a href="@Url.Action("Index", "Home")" class="btn btn-primary btn-lg" style="background-color:#054e98; border:none;">
     Volver al inicio
 </a>
