--- a/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Shared/_Layout.cshtml
@@ -23,7 +23,9 @@
             </button>
             <div class="collapse navbar-collapse d-sm-inline-flex justify-content-end">
                 <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", null, new { @class = "nav-link" })</li>
+                    @if (Request.IsAuthenticated)
+                    {
+
                     <li>@Html.ActionLink("Manejo de Comercios", "Index", "COMERCIOs", null, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Manejo de Cajas", "Index", "CAJAs", null, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Manejo de Sinpes", "Index", "SINPEs", null, new { @class = "nav-link" })</li>
@@ -31,13 +33,33 @@
                     <li>@Html.ActionLink("Manejo de Usuarios", "Index", "USUARIOs", null, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Manejo de Reportes", "Index", "REPORTESMENSUALES", null, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Bitácora de Eventos", "Index", "BITACORAs", null, new { @class = "nav-link" })</li>
+
+                    }
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
+
             <div class="text-center mt-4">
-                <a href="@Url.Action("Login", "Account")" class="btn btn-primary btn-lg" style="background-color:#054e98; border:none;">
-                    Sinpe en Línea
-                </a>
+
+                @if (Request.IsAuthenticated)
+                {
+                    <a href="@Url.Action("Index", "SINPEs")" class="btn btn-primary btn-lg" style="background-color:#054e98; border:none;">
+                        Sinpe en linea
+                    </a>
+
+                }
+                else
+                {
+                    <a href="@Url.Action("Register", "Account")" class="btn btn-secondary btn-lg" style="background-color:#054e98; border:none;">
+                        Registrarse
+                    </a>
+                    <a href="@Url.Action("Login", "Account")" class="btn btn-primary btn-lg" style="background-color:#054e98; border:none;">
+                        Iniciar sesion!
+                    </a>
+                }
+
+
             </div>
 
         </div>
