--- a/PlataFormaDePagosWebApp/Views/REPORTESMENSUALES/Index.cshtml
+++ b/PlataFormaDePagosWebApp/Views/REPORTESMENSUALES/Index.cshtml
@@ -34,7 +34,7 @@
                 @foreach (var item in Model)
                 {
                     <tr>
-                        <td>@item.COMERCIO?.Nombre</td>
+                        <td>@item.COMERCIO.Nombre</td>
                         <td>@item.CantidadDeCajas</td>
                         <td>₡@item.MontoTotalRecaudado.ToString("N2")</td>
                         <td>@item.CantidadDeSinpes</td>
