--- a/PlataFormaDePagosWebApp/Views/Account/Register.cshtml
+++ b/PlataFormaDePagosWebApp/Views/Account/Register.cshtml
@@ -9,7 +9,7 @@
     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { role = "form" }))
     {
         @Html.AntiForgeryToken()
-        <h4>Cree una cuenta nueva.</h4>
+        <h4>Registre su usuario en el sistema.</h4>
         <hr />
         @Html.ValidationSummary("", new { @class = "text-danger" })
         <div class="row">
@@ -18,21 +18,31 @@
                 @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
             </div>
         </div>
+        <br>
         <div class="row">
             @Html.LabelFor(m => m.Password, new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
                 @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             </div>
         </div>
+        <br>
         <div class="row">
             @Html.LabelFor(m => m.ConfirmPassword, new { @class = "col-md-2 col-form-label" })
             <div class="col-md-10">
                 @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control" })
             </div>
         </div>
+        <br>
+        <div class="row">
+            @Html.LabelFor(m => m.role, new { @class = "col-md-2 col-form-label" })
+            <div class="col-md-10" aria-labelledby="dropdownMenuLink">
+                @Html.DropDownListFor(m => m.role, new SelectList(Model.ListaRoles))
+            </div>
+        </div>
+        <br>
         <div class="row">
             <div class="offset-md-2 col-md-10">
-                <input type="submit" value="Registrarse" class="btn btn-outline-dark" />
+                <input type="submit" value="Registrarse" class="btn btn-success" />
             </div>
         </div>
     }
